--- a/config.yaml
+++ b/config.yaml
@@ -1,11 +1,20 @@
 listen: :8080
+
 tls:
   cert: /etc/hysteria/cert.pem
   key: /etc/hysteria/key.pem
+
 auth:
   type: password
-  password: your-password-here
+password: "Z8r#vT9q@Lx3!sW2pK7$gB1e"
+
 masquerade:
   type: proxy
   proxy:
-    url: https://www.bing.com
+    url: https://www.bing.com  # 可换成你想伪装的站点
+
+udp:
+  hop_interval: 30s
+  idle_timeout: 60s
+  max_idle_timeout: 300s
+  disable_mtu_discovery: false
