Fix fly.toml: correct UDP service config

--- a/fly.toml
+++ b/fly.toml
@@ -4,15 +4,14 @@ primary_region = "sjc"
 [build]
   dockerfile = "Dockerfile"
 
-[env]
-
 [[services]]
   internal_port = 8080
-  protocol = "tcp"
+  protocol = "udp"
 
   [[services.ports]]
     port = 8080
+    protocol = "udp"
 
-  [[services.tcp_checks]]
+  [[services.udp_checks]]
     interval = "10s"
     timeout = "2s"
