Add process group to trigger machine creation

--- a/fly.toml
+++ b/fly.toml
@@ -1,3 +1,12 @@
+app = "hy2-flyio-server"
+primary_region = "sjc"
+
+[build]
+  dockerfile = "Dockerfile"
+
+[processes]
+app = "/entrypoint.sh"
+
 [[services]]
   internal_port = 8080
   protocol = "tcp"
@@ -5,3 +14,7 @@
   [[services.ports]]
     port = 8080
     protocol = "tcp"
+
+  [[services.tcp_checks]]
+    interval = "10s"
+    timeout = "2s"
