--- a/fly.toml
+++ b/fly.toml
@@ -1,20 +1,23 @@
-app = "hy2-flyio-server"
-primary_region = "sjc"
+# fly.toml app configuration file generated for hy2-app-server on 2025-12-25T04:15:58Z
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
+
+app = 'hy2-app-server'
+primary_region = 'sjc'
 
 [build]
-  dockerfile = "Dockerfile"
 
-[processes]
-app = "/entrypoint.sh"
-
-[[services]]
+[http_service]
   internal_port = 8080
-  protocol = "tcp"
+  force_https = true
+  auto_stop_machines = 'stop'
+  auto_start_machines = true
+  min_machines_running = 0
+  processes = ['app']
 
-  [[services.ports]]
-    port = 8080
-    protocol = "tcp"
-
-  [[services.tcp_checks]]
-    interval = "10s"
-    timeout = "2s"
+[[vm]]
+  memory = '1gb'
+  cpu_kind = 'shared'
+  cpus = 1
+  memory_mb = 1024
